--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
  
 <html>
   <head>
-    <title>Image recognition</title>
+    <title>Face recognition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
    <link rel="stylesheet" href="style.css">
@@ -17,18 +19,16 @@
   <div class="container">
     
     <center>
-      <h3 class="btn btn-default heading">Image Recognizer</h3>
+      <h3 class="btn btn-default heading">Face Recognizer</h3>
       <br><br>
 
-      <p style="font-size: 22px;">Model is trained to identify the following objects: </p>
-      <b class="name_of_objects" >
-        1.Watch
+      <p style="font-size: 22px;">Model is trained to identify the following people: </p>
+      <b class="name_of_members" >
+        1.Father
         <hr>
-        2.Book
+        2.Mother
         <hr>
-        3.Bottle
-        <hr>
-        4.Pen
+        3.Sister
         <hr>
       </b>
 
@@ -45,8 +45,8 @@
 
       <br><br>
 
-      <p style="font-size: 22px;">Object : <span id="result_object_name" class=""></span> </p>
-      <p style="font-size: 22px;">Accuracy : <span id="result_object_accuracy" class=""></span> </p>
+      <p style="font-size: 22px;">Member : <span id="result_member_name" class=""></span> </p>
+      <p style="font-size: 22px;">Accuracy : <span id="result_member_accuracy" class=""></span> </p>
     </center>
 
   </div>
